ip6tables
# Generated by ip6tables-save v1.6.0 on Sun Nov 13 18:49:53 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -i eth0 -m pkttype --pkt-type broadcast -j ACCEPT
-A INPUT -i eth0 -m pkttype --pkt-type multicast -j ACCEPT
-A INPUT -s fe80::/10 -j ACCEPT
-A INPUT -s fc00::/7 -j ACCEPT
-A INPUT -d fd00::ac10:1/128 -i eth0 -j ACCEPT
-A INPUT -s 2001:2e8:603:0:3:1:0:115/128 -j ACCEPT
-A INPUT -s 2001:3e0:3000:10e:2:1:0:2e/128 -j ACCEPT
-A INPUT -s 2403:3a00:202:1102:219:94:241:152/128 -j ACCEPT
-A INPUT -s 2001:470:23:87f::/64 -j ACCEPT
-A INPUT -s 2001:470:24:87f::/64 -j ACCEPT
-A INPUT -s 2001:470:fde0::/48 -j ACCEPT
-A INPUT -s 2001:470:23:8bd::/64 -j ACCEPT
-A INPUT -s 2001:470:24:8bd::/64 -j ACCEPT
-A INPUT -s 2001:470:fd67::/48 -j ACCEPT
-A INPUT -s 2001:240:2200:7a00::/56 -j ACCEPT
-A INPUT -s 2001:3d8:0:4f0::/64 -j ACCEPT
-A INPUT -d 2001:470:24:87f::50/128 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A INPUT -d 2001:470:24:87f::50/128 -p tcp -m tcp --dport 53 -m state --state NEW -j ACCEPT
-A INPUT -d 2001:470:24:87f::1:0/112 -p udp -m udp --dport 53 -m state --state NEW -j ACCEPT
-A INPUT -d 2001:470:24:87f::1:0/112 -p tcp -m tcp --dport 53 -m state --state NEW -j ACCEPT
-A INPUT -d 2001:470:24:87f::123/128 -p udp -m udp --dport 123 -m state --state NEW -j ACCEPT
-A INPUT -d 2001:470:24:87f::123/128 -p tcp -m tcp --dport 123 -m state --state NEW -j ACCEPT
-A INPUT -m state --state RELATED -j ACCEPT
-A INPUT -m state --state ESTABLISHED -j ACCEPT
-A INPUT -j LOG --log-prefix "ip_tables: [INPUT] "
-A INPUT -m state --state NEW -j REJECT --reject-with icmp6-adm-prohibited
-A INPUT -m state --state INVALID -j REJECT --reject-with icmp6-adm-prohibited
-A INPUT -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i lo -j ACCEPT
-A FORWARD -p ipv6-icmp -j ACCEPT
-A FORWARD -i eth0 -j ACCEPT
-A FORWARD -d 2001:470:24:87f::/64 -j ACCEPT
-A FORWARD -m state --state RELATED -j ACCEPT
-A FORWARD -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -j LOG --log-prefix "ip_tables: [FORWARD] "
-A FORWARD -m state --state NEW -j REJECT --reject-with icmp6-no-route
-A FORWARD -m state --state INVALID -j REJECT --reject-with icmp6-no-route
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p ipv6-icmp -j ACCEPT
-A OUTPUT -o eth0 -m pkttype --pkt-type broadcast -j ACCEPT
-A OUTPUT -o eth0 -m pkttype --pkt-type multicast -j ACCEPT
-A OUTPUT -o eth0 -m state --state NEW -j ACCEPT
-A OUTPUT -m state --state RELATED -j ACCEPT
-A OUTPUT -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -j LOG --log-prefix "ip_tables: [OUTPUT] "
-A OUTPUT -m state --state NEW -j REJECT --reject-with icmp6-adm-prohibited
-A OUTPUT -m state --state INVALID -j REJECT --reject-with icmp6-adm-prohibited
-A OUTPUT -j DROP
COMMIT
# Completed on Sun Nov 13 18:49:53 2016
