iptables
# Generated by iptables-save v1.6.0 on Sun Nov 13 18:49:15 2016
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i eth0 -m pkttype --pkt-type broadcast -j ACCEPT
-A INPUT -i eth0 -m pkttype --pkt-type multicast -j ACCEPT
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 172.16.0.0/12 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A INPUT -s 169.254.0.0/16 -j ACCEPT
-A INPUT -s 183.181.175.21/32 -j ACCEPT
-A INPUT -s 36.55.240.46/32 -j ACCEPT
-A INPUT -s 219.94.241.152/32 -j ACCEPT
-A INPUT -s 180.235.229.134/32 -j ACCEPT
-A INPUT -s 203.141.152.199/32 -j ACCEPT
-A INPUT -s 61.115.34.128/27 -j ACCEPT
-A INPUT -s 61.115.34.160/27 -j ACCEPT
-A INPUT -s 211.9.226.128/27 -j ACCEPT
-A INPUT -s 74.82.46.6/32 -p ipv6 -j ACCEPT
-A INPUT -p udp -m udp --dport 123 -m state --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 123 -m state --state NEW -j ACCEPT
-A INPUT -m state --state RELATED -j ACCEPT
-A INPUT -m state --state ESTABLISHED -j ACCEPT
-A INPUT -j LOG --log-prefix "ip_tables: [INPUT] "
-A INPUT -m state --state NEW -j REJECT --reject-with icmp-admin-prohibited
-A INPUT -m state --state INVALID -j REJECT --reject-with icmp-admin-prohibited
-A INPUT -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -i lo -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -i eth0 -j ACCEPT
-A FORWARD -m state --state RELATED -j ACCEPT
-A FORWARD -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -j LOG --log-prefix "ip_tables: [FORWARD] "
-A FORWARD -m state --state NEW -j REJECT --reject-with icmp-net-unreachable
-A FORWARD -m state --state INVALID -j REJECT --reject-with icmp-net-unreachable
-A FORWARD -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -o eth0 -m pkttype --pkt-type broadcast -j ACCEPT
-A OUTPUT -o eth0 -m pkttype --pkt-type multicast -j ACCEPT
-A OUTPUT -m state --state NEW -j ACCEPT
-A OUTPUT -m state --state RELATED -j ACCEPT
-A OUTPUT -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -j LOG --log-prefix "ip_tables: [OUTPUT] "
-A OUTPUT -m state --state NEW -j REJECT --reject-with icmp-admin-prohibited
-A OUTPUT -m state --state INVALID -j REJECT --reject-with icmp-admin-prohibited
-A OUTPUT -j DROP
COMMIT
# Completed on Sun Nov 13 18:49:15 2016
